@@ -20,11 +20,14 @@ sudo apt-get install -y php libapache2-mod-php
 sudo service apache2 restart
 
 echo "-------------------- "
+echo "-------------------- installing Java 8"
+echo "-------------------- "
+sudo apt-get install openjdk-8-jre icedtea-8-plugin openjdk-8-jdk
+
+echo "-------------------- "
 echo "-------------------- installing and tweaking tomcat"
 echo "-------------------- "
 sudo apt-get install -y tomcat8
-sudo sed -i "s/JAVA_OPTS=\"-Djava.awt.headless=true -Xmx128m -XX:+UseConcMarkSweepGC\"/JAVA_OPTS=\"-Djava.awt.headless=true -Xms1024m -Xmx1024m -XX:MaxPermSize=512m  -XX:+UseConcMarkSweepGC\"/" /etc/default/tomcat8
-sudo service tomcat8 restart
 
 echo "-------------------- "
 echo "-------------------- installing postgres & postgis"
@@ -48,28 +51,10 @@ echo "-------------------- "
 sudo sh -c 'echo "host all all 0.0.0.0/0 md5" >> /etc/postgresql/9.5/main/pg_hba.conf'
 
 echo "-------------------- "
-echo "-------------------- create basic pettycash & djangoapi database and user"
+echo "-------------------- create basic climatecharts database"
 echo "-------------------- "
-sudo -u postgres psql -f ${DATABASE_FOLDER}/database.gen
-
-echo "-------------------- "
-echo "-------------------- create basic climatecharts_weatherstations tables"
-echo "-------------------- "
-sudo -u postgres psql -d climatecharts_weatherstations -f ${DATABASE_FOLDER}/tables.gen
-
-# fill tables if relevant file exist
-if [ -e "${HIDDEN_ASSETS_FOLDER}/uptodatedata.sql" ]; then
-  echo "-------------------- "
-  echo "-------------------- fill tables"
-  echo "-------------------- "
-  sudo -u postgres psql -d climatecharts_weatherstations -f ${HIDDEN_ASSETS_FOLDER}/uptodatedata.sql
-fi
-sudo /etc/init.d/postgresql restart
-
-echo "-------------------- "
-echo "-------------------- upgrade rest of the system"
-echo "-------------------- "
-sudo apt-get upgrade -y
+sudo -u postgres psql -c "CREATE DATABASE climatecharts_weatherstations"
+sudo -u postgres psql -d climatecharts_weatherstations -c "CREATE EXTENSION postgis"
 
 echo "-------------------- "
 echo "-------------------- add github.com to known hosts"
@@ -148,33 +133,32 @@ if [ -e "${ASSETS_FOLDER}/weatherstations/data" ]; then
   cp -R ${ASSETS_FOLDER}/weatherstations/data ${DEV_FOLDER}/weatherstations/populate_db
 fi
 
+echo "-------------------- "
+echo "-------------------- create basic climatecharts_weatherstations tables"
+echo "-------------------- "
+cd ${DEV_FOLDER}/weatherstations
+sudo pip install virtualenv
+virtualenv env --always-copy
+source env/bin/activate
+pip install -r populate_db/requirements.txt
+python populate_db/manage.py makemigrations
+python populate_db/manage.py migrate
 
-#echo "-------------------- "
-#echo "-------------------- build weatherstations populate db"
-#echo "-------------------- "
-#sudo pip install virtualenv
-#virtualenv env
-#source env/bin/activate
-#pip install -r ${DEV_FOLDER}/weatherstations/populate_db/requirements.txt
-
-
-#echo "-------------------- "
-#echo "-------------------- create and fill djangoapi tables and create superuser"
-#echo "-------------------- "
-#cd /home/vagrant/development/weatherstations/populate_db/ #because there is the data folder
-#python ${DEV_FOLDER}/weatherstations/populate_db/manage.py makemigrations
-#python ${DEV_FOLDER}/weatherstations/populate_db/manage.py migrate
-#python ${DEV_FOLDER}/weatherstations/populate_db/manage.py load_data S # load station data
-#python ${DEV_FOLDER}/weatherstations/populate_db/manage.py load_data D # load stationdata data
-#python ${DEV_FOLDER}/weatherstations/populate_db/manage.py update_stations # create statistics data
-
+# fill tables if relevant file exist
+if [ -e "${HIDDEN_ASSETS_FOLDER}/uptodatedata.sql" ]; then
+  echo "-------------------- "
+  echo "-------------------- fill tables"
+  echo "-------------------- "
+  sudo -u postgres psql -d climatecharts_weatherstations -f ${HIDDEN_ASSETS_FOLDER}/uptodatedata.sql
+fi
+sudo /etc/init.d/postgresql restart
 
 echo "-------------------- "
 echo "-------------------- Install Thredds server example"
 echo "-------------------- "
 sudo mkdir ${THREDDS_FOLDER}
 sudo chmod 777 -R ${THREDDS_FOLDER}
-sudo cp ${ASSETS_FOLDER}/thredds/setenv.sh /usr/share/tomcat8/bin
+sudo cp ${ASSETS_FOLDER}/thredds/tomcat8 /etc/default/tomcat8
 cp ${ASSETS_FOLDER}/thredds/thredds.war ${WEBAPPS_FOLDER}
 
 echo "-------------------- "
@@ -189,6 +173,11 @@ cp -R ${ASSETS_FOLDER}/thredds/GHCN_CAMS ${THREDDS_FOLDER}/data
 cp ${ASSETS_FOLDER}/thredds/catalog.xml ${THREDDS_FOLDER}/thredds
 cp ${ASSETS_FOLDER}/thredds/threddsConfig.xml ${THREDDS_FOLDER}/thredds
 sudo chmod 777 -R /var/lib/tomcat8/content/
+
+echo "-------------------- "
+echo "-------------------- upgrade rest of the system"
+echo "-------------------- "
+sudo apt-get upgrade -y
 
 echo "-------------------- "
 echo "-------------------- Start Tomcat Service"
